--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -18,6 +18,7 @@ myst-parser = "==0.18.1"
 
 django = "==4.1.5"
 django-environ = "==0.9.0"
+sphinx-copybutton = "==0.5.2"
 
 [tool.poetry.dev-dependencies]
 
