--- a/front/package.json
+++ b/front/package.json
@@ -77,6 +77,7 @@
     "@vue/eslint-config-typescript": "11.0.2",
     "@vue/test-utils": "2.2.7",
     "@vue/tsconfig": "0.1.3",
+    "axios-mock-adapter": "1.21.4",
     "eslint": "8.30.0",
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-html": "7.1.0",
@@ -87,9 +88,9 @@
     "eslint-plugin-vue": "9.8.0",
     "jsdom": "20.0.3",
     "jsonc-eslint-parser": "2.1.0",
-    "moxios": "0.4.0",
     "sass": "1.57.1",
     "sinon": "15.0.1",
+    "standardized-audio-context-mock": "9.6.18",
     "typescript": "4.9.4",
     "utility-types": "3.10.0",
     "vite": "4.0.4",
