--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,17 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.4.2
+    hooks:
+      - id: poetry-check
+        files: ^api/pyproject.toml$
+        args: [--directory=api]
+
+      - id: poetry-lock
+        files: ^api/pyproject.toml$
+        args: [--directory=api, --check]
+
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
