--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -85,6 +85,9 @@ requests-http-message-signatures = "==0.3.1"
 sentry-sdk = "==1.19.1"
 watchdog = "==2.2.1"
 
+# Typesense
+typesense = { version = "==0.15.1", optional = true }
+
 # Dependencies pinning
 ipython = "==7.34.0"
 pluralizer = "==1.2.0"
@@ -117,6 +120,9 @@ requests-mock = "==1.10.0"
 [tool.poetry.group.dev.dependencies]
 pylint = "==2.17.2"
 pylint-django = "==2.5.3"
+
+[tool.poetry.extras]
+typesense = ["typesense"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
