--- a/deploy/env.prod.sample
+++ b/deploy/env.prod.sample
@@ -15,6 +15,9 @@
 # Additional options you may want to check:
 # - MUSIC_DIRECTORY_PATH and MUSIC_DIRECTORY_SERVE_PATH if you plan to use
 #   in-place import
+# - TYPESENSE_API_KEY if you want to enable typesense to experiment with
+#   the recommendation system set this. You can
+#   generate one using `openssl rand -base64 45`, for example
 #
 # Docker only
 # -----------
