--- a/front/package.json
+++ b/front/package.json
@@ -88,6 +88,7 @@
     "eslint-plugin-vue": "9.8.0",
     "jsdom": "20.0.3",
     "jsonc-eslint-parser": "2.1.0",
+    "rollup-plugin-visualizer": "5.9.0",
     "sass": "1.57.1",
     "sinon": "15.0.2",
     "standardized-audio-context-mock": "9.6.18",
