--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -13,7 +13,7 @@ sphinx_design = "==0.3.0"
 sphinx-intl = "2.0.1"
 sphinx-rtd-theme = "==1.1.1"
 sphinxcontrib-mermaid = "0.7.1"
-myst-parser = "==0.18.1"
+myst-parser = "1.0.0"
 
 django = "==4.1.5"
 django-environ = "==0.9.0"
