--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -98,6 +98,8 @@ services:
     env_file:
       - .env
     image: typesense/typesense:0.24.0
+    networks:
+      - internal
     volumes:
       - ./typesense/data:/data
     command: --data-dir /data --enable-cors
