ci: don't run on branch containing stable or develop
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2452>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ workflow:
     - if: >
         $CI_PROJECT_NAMESPACE == "funkwhale" &&
         (
-          $CI_COMMIT_BRANCH =~ /(stable|develop)/ ||
+          $CI_COMMIT_BRANCH =~ /^(stable|develop)$/ ||
           $CI_COMMIT_TAG
         )
     # Run for merge requests from any repo or branches
