ci: Do proper test result reporting in CI
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2458>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -288,7 +288,10 @@ test_front:
     - yarn test:unit
   artifacts:
     reports:
-      junit: front/coverage/cobertura-coverage.xml
+      junit: front/test_results.xml
+      coverage_report:
+        coverage_format: cobertura
+        path: front/coverage/cobertura-coverage.xml
 
 build_metadata:
   stage: build
