--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 
 sphinx = "==5.3.0"
 sphinx_design = "==0.3.0"
+sphinx-copybutton = "==0.5.2"
 sphinx-intl = "2.0.1"
 sphinx-rtd-theme = "==1.1.1"
 sphinxcontrib-mermaid = "0.7.1"
@@ -17,10 +18,10 @@ myst-parser = "==1.0.0"
 
 django = "==3.2.18"
 django-environ = "==0.10.0"
-funkwhale-api = {path = "../api"}
-sphinx-copybutton = "==0.5.2"
+# funkwhale-api = {path = "../api"}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+livereload = "^2.6.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
