--- a/front/cypress/tsconfig.json
+++ b/front/cypress/tsconfig.json
@@ -4,6 +4,6 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"]
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "./cypress.d.ts"],
   "isolatedModules": false
 }
