--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -86,7 +86,7 @@ sentry-sdk = "==1.12.1"
 watchdog = "==2.2.1"
 
 # Dependencies pinning
-importlib-metadata = { version = "==4.13.0", python = "<=3.7" }
+importlib-metadata = { version = "==4.13.0", python = "^3.7" }
 ipython = "==7.34.0"
 pluralizer = "==1.2.0"
 service-identity = "==21.1.0"
