fix(front): added "dynamic_preferences" path block to nginx
fixes banner image not loading (#2149)

MR: !2442

--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -132,6 +132,12 @@ server {
         add_header Access-Control-Allow-Origin '*';
     }
 
+    # Allow direct access to only specific subdirectories in /media
+    location /media/dynamic_preferences/ {
+        alias ${MEDIA_ROOT}/dynamic_preferences/;
+        add_header Access-Control-Allow-Origin '*';
+    }
+
     # This is an internal location that is used to serve
     # media (uploaded) files once correct permission / authentication
     # has been checked on API side.
