fix: Load the spa manifest using the correct protocol

--- a/front/docker/funkwhale.conf.template
+++ b/front/docker/funkwhale.conf.template
@@ -128,6 +128,6 @@ server {
     }
 
     location /manifest.json {
-        return 302 /api/v1/instance/spa-manifest.json;
+        return 302 ${FUNKWHALE_PROTOCOL}://${FUNKWHALE_HOSTNAME}/api/v1/instance/spa-manifest.json;
     }
 }
