ci(front): speedup linting with eslint by using cache
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2503>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,9 @@ variables:
         prefix: front-node_modules
         files: [front/yarn.lock]
       paths: [front/node_modules]
+    - key:
+        prefix: front-lint
+        files: [front/.eslintcache]
 
   # Cache for api related jobs
   # Include the python version to prevent loosing caches in the test matrix
