--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
     "serve": "vite preview",
     "test": "vitest run",
     "test:unit": "vitest run --coverage",
-    "lint": "eslint --ext .ts,.js,.vue,.json,.html src test public/embed.html",
+    "lint": "eslint --cache --cache-strategy content --ext .ts,.js,.vue,.json,.html src test public/embed.html",
     "lint:tsc": "vue-tsc --noEmit",
     "fix-fomantic-css": "scripts/fix-fomantic-css.sh",
     "postinstall": "yarn run fix-fomantic-css"
