ci(front): speedup type checking with vue-tsc by using incremental cache
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2503>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,9 @@ variables:
       paths: [front/node_modules]
     - key:
         prefix: front-lint
-        files: [front/.eslintcache]
+        files:
+          - front/.eslintcache
+          - front/tsconfig.tsbuildinfo
 
   # Cache for api related jobs
   # Include the python version to prevent loosing caches in the test matrix
