--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -94,7 +94,7 @@ pluralizer = "==1.2.0"
 service-identity = "==21.1.0"
 unicode-slugify = "==0.1.5"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 aioresponses = "==0.7.4"
 asynctest = "==0.13.0"
 black = "==23.3.0"
@@ -116,10 +116,9 @@ pytest-mock = "==3.10.0"
 pytest-randomly = "==3.12.0"
 pytest-sugar = "==0.9.7"
 requests-mock = "==1.10.0"
-
-[tool.poetry.group.dev.dependencies]
 pylint = "==2.17.2"
 pylint-django = "==2.5.3"
+django-extensions = "==3.2.3"
 
 [tool.poetry.extras]
 typesense = ["typesense"]
