fix(dev): Remove obsolete base path for frontend
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2533>

--- a/dev.yml
+++ b/dev.yml
@@ -19,7 +19,7 @@ services:
       - "./po:/po"
     networks:
       - internal
-    command: "yarn dev --host --base /front/"
+    command: "yarn dev --host"
 
   postgres:
     env_file:
