--- a/.env.dev
+++ b/.env.dev
@@ -12,6 +12,7 @@ FORWARDED_PROTO=http
 LDAP_ENABLED=False
 FUNKWHALE_SPA_HTML_ROOT=http://nginx/
 PYTHONTRACEMALLOC=0
+MEDIA_ROOT=/data/media
 
 # Uncomment this if you're using traefik/https
 # FORCE_HTTPS_URLS=True
