fix: Replace deprecated syntax
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2533>

--- a/dev.yml
+++ b/dev.yml
@@ -206,5 +206,5 @@ services:
 networks:
   internal:
   federation:
-    external:
-      name: federation
+    name: federation
+    external: true
