--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -1,8 +1,13 @@
-# This file was generated from Funkwhale's nginx.template
 
 upstream funkwhale-api {
     # depending on your setup, you may want to update this
     server ${FUNKWHALE_API_IP}:${FUNKWHALE_API_PORT};
+}
+
+# Required for websocket support.
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
 }
 
 server {
@@ -21,16 +26,10 @@ server {
     }
 }
 
-# Required for websocket support.
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-}
-
 server {
     listen      443 ssl http2;
     listen [::]:443 ssl http2;
-    charset     utf-8;
+
     server_name ${FUNKWHALE_HOSTNAME};
 
     # TLS
@@ -49,12 +48,11 @@ server {
     # HSTS
     add_header Strict-Transport-Security "max-age=31536000";
 
-    add_header Content-Security-Policy "default-src 'self'; connect-src https: wss: http: ws: 'self' 'unsafe-eval'; script-src 'self' 'wasm-unsafe-eval'; style-src https: http: 'self' 'unsafe-inline'; img-src https: http: 'self' data:; font-src https: http: 'self' data:; media-src https: http: 'self' data:; object-src 'none'";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header Service-Worker-Allowed "/";
 
-    root ${FUNKWHALE_FRONTEND_PATH};
+    # General configs
+    root ${FUNKWHALE_FRONTEND_PATH},
+    client_max_body_size ${NGINX_MAX_BODY_SIZE};
+    charset utf-8;
 
     # compression settings
     gzip on;
@@ -62,7 +60,6 @@ server {
     gzip_min_length    256;
     gzip_proxied       any;
     gzip_vary          on;
-
     gzip_types
         application/javascript
         application/vnd.geo+json
@@ -83,6 +80,12 @@ server {
         text/x-cross-domain-policy;
     # end of compression settings
 
+    # headers
+    add_header Content-Security-Policy "default-src 'self'; connect-src https: wss: http: ws: 'self' 'unsafe-eval'; script-src 'self' 'wasm-unsafe-eval'; style-src https: http: 'self' 'unsafe-inline'; img-src https: http: 'self' data:; font-src https: http: 'self' data:; media-src https: http: 'self' data:; object-src 'none'";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Service-Worker-Allowed "/";
+
     location /api/ {
         include /etc/nginx/funkwhale_proxy.conf;
         # This is needed if you have file import via upload enabled.
@@ -91,16 +94,16 @@ server {
     }
 
     location / {
-        alias ${FUNKWHALE_FRONTEND_PATH}/;
         expires 1d;
+        alias ${FUNKWHALE_FRONTEND_PATH}/,
         try_files $uri $uri/ /index.html;
     }
 
     location ~ "/(front/)?embed.html" {
+        alias ${FUNKWHALE_FRONTEND_PATH}/embed.html,
         add_header Content-Security-Policy "connect-src https: http: 'self'; default-src 'self'; script-src 'self' unpkg.com 'unsafe-inline' 'unsafe-eval'; style-src https: http: 'self' 'unsafe-inline'; img-src https: http: 'self' data:; font-src https: http: 'self' data:; object-src 'none'; media-src https: http: 'self' data:";
         add_header Referrer-Policy "strict-origin-when-cross-origin";
 
-        alias ${FUNKWHALE_FRONTEND_PATH}/embed.html;
         expires 1d;
     }
 
@@ -158,7 +161,7 @@ server {
         # has been checked on API side.
         # Set this to the same value as your MUSIC_DIRECTORY_PATH setting.
         internal;
-        alias   ${MUSIC_DIRECTORY_SERVE_PATH}/;
+        alias   ${MUSIC_DIRECTORY_PATH}/;
         add_header Access-Control-Allow-Origin '*';
     }
 
@@ -166,4 +169,5 @@ server {
         # If the reverse proxy is terminating SSL, nginx gets confused and redirects to http, hence the full URL
         return 302 ${FUNKWHALE_PROTOCOL}://${FUNKWHALE_HOSTNAME}/api/v1/instance/spa-manifest.json;
     }
+
 }
