feat(front): add vue macros
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2552>

--- a/front/package.json
+++ b/front/package.json
@@ -71,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@vitejs/plugin-vue": "4.0.0",
     "@vitest/coverage-c8": "0.25.8",
+    "@vue-macros/volar": "0.13.3",
     "@vue/compiler-sfc": "3.2.47",
     "@vue/eslint-config-standard": "8.0.1",
     "@vue/eslint-config-typescript": "11.0.2",
@@ -91,6 +92,7 @@
     "sinon": "15.0.1",
     "standardized-audio-context-mock": "9.6.18",
     "typescript": "4.9.4",
+    "unplugin-vue-macros": "2.4.6",
     "utility-types": "3.10.0",
     "vite": "4.0.4",
     "vite-plugin-pwa": "0.14.1",
