WIP: Test if this fixes the multiarch docker builds

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -15,6 +15,7 @@ FROM alpine:3.17 as builder
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 ARG PIP_NO_CACHE_DIR=1
+ENV CARGO_NET_GIT_FETCH_WITH_CLI=true
 
 RUN set -eux; \
   apk add --no-cache \
