--- a/front/package.json
+++ b/front/package.json
@@ -34,6 +34,7 @@
     "fomantic-ui-css": "2.9.2",
     "howler": "2.2.3",
     "idb-keyval": "6.2.1",
+    "js-logger": "1.6.1",
     "lodash-es": "4.17.21",
     "lru-cache": "7.14.1",
     "moment": "2.29.4",
