--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "lru-cache": "7.14.1",
     "moment": "2.29.4",
     "showdown": "2.1.0",
+    "stacktrace-js": "2.0.2",
     "standardized-audio-context": "25.3.55",
     "text-clipper": "2.2.0",
     "transliteration": "2.3.5",
