--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -453,7 +453,7 @@ deploy_docs:
   variables:
     GIT_STRATEGY: none
   script:
-    - rsync -r -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/$CI_COMMIT_REF_NAME
+    - rsync -r --delete -e "ssh -p 2282" $CI_PROJECT_DIR/public/ docs@docs.funkwhale.audio:/htdocs/$CI_COMMIT_REF_NAME
 
 docker:
   interruptible: false
