chore(renovate): Don't pin python version to the latest
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2594>

--- a/.gitlab/renovate.json
+++ b/.gitlab/renovate.json
@@ -70,6 +70,10 @@
         ],
         "fileFilters": ["changes/changelog.d/postgres.update"]
       }
+    },
+    {
+      "matchPackageNames": ["python"],
+      "rangeStrategy": "widen"
     }
   ]
 }
