--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -65,6 +65,8 @@ tasks:
       echo -e "    \u1b[34m⠀⠻⣦⡈⠻⠶⣶⣶⠶⠟⢁⣴⠟⠀"
       echo -e "    \u1b[34m⠀⠀⠈⠻⠷⣦⣤⣤⣴⠾⠟⠁⠀⠀    gitpod\u1b[0m:\u1b[34mfunkwhale"
       echo ""
+  - name: Documentation
+    command: make dev
 
 ports:
   - port: 8000
@@ -90,6 +92,10 @@ ports:
   - port: 8080
     visibility: private
     onOpen: ignore
+
+  - port: 8081
+    visibility: public
+    onOpen: notify
 
 vscode:
   extensions:
