--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -20,7 +20,7 @@ django = "==3.2.20"
 django-environ = "==0.10.0"
 
 [tool.poetry.group.dev.dependencies]
-livereload = "^2.6.3"
+sphinx-autobuild = "^2021.3.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
