--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -179,6 +179,7 @@ env = [
   "DISABLE_PASSWORD_VALIDATORS=false",
   "FUNKWHALE_PLUGINS=",
   "MUSIC_DIRECTORY_PATH=/music",
+  "ONLY_ALLOW_MUSICBRAINZ_TAGGED_FILES=true",
 ]
 
 [tool.coverage.run]
