--- a/front/package.json
+++ b/front/package.json
@@ -100,6 +100,7 @@
     "utility-types": "3.10.0",
     "vite": "4.3.5",
     "vite-plugin-pwa": "0.14.4",
+    "vite-plugin-vue-devtools": "1.0.0-rc.5",
     "vitest": "0.25.8",
     "vue-tsc": "1.6.5",
     "workbox-core": "6.5.4",
