--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -87,6 +87,7 @@ watchdog = "==2.2.1"
 troi = { git = "https://github.com/metabrainz/troi-recommendation-playground.git", tag = "v-2023-10-30.0"}
 lb-matching-tools = { git = "https://github.com/metabrainz/listenbrainz-matching-tools.git", branch = "main"}
 unidecode = "==1.3.6"
+pycountry = "22.3.5"
 
 # Typesense
 typesense = { version = "==0.15.1", optional = true }
