--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -84,7 +84,7 @@ requests = "==2.28.2"
 requests-http-message-signatures = "==0.3.1"
 sentry-sdk = "==1.19.1"
 watchdog = "==2.2.1"
-troi = { git = "https://github.com/metabrainz/troi-recommendation-playground.git", branch = "main"}
+troi = { git = "https://github.com/metabrainz/troi-recommendation-playground.git", tag = "v-2023-10-30.0"}
 lb-matching-tools = { git = "https://github.com/metabrainz/listenbrainz-matching-tools.git", branch = "main"}
 unidecode = "==1.3.6"
 
