chore: Use make install everywhere instead of poetry install
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2646>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,7 +14,7 @@ tasks:
       docker-compose up -d
 
       poetry env use python
-      poetry install
+      make install
 
       gp ports await 5432
 
