--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -248,7 +248,7 @@ test_api:
     CACHE_URL: "redis://redis:6379/0"
   before_script:
     - cd api
-    - poetry install --all-extras
+    - make install
   script:
     - >
       poetry run pytest
@@ -351,7 +351,7 @@ build_api_schema:
     API_TYPE: "v1"
   before_script:
     - cd api
-    - poetry install --all-extras
+    - make install
     - poetry run funkwhale-manage migrate
   script:
     - poetry run funkwhale-manage spectacular --file ../docs/schema.yml
