fix(nginx): Make sure pages that require OG tags are served by the backend
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2623>

--- a/deploy/docker.proxy.template
+++ b/deploy/docker.proxy.template
@@ -79,6 +79,26 @@ server {
 
 
 
+    location ~ ^/library/(albums|tracks|artists|playlists)/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
+
+    location /channels/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
+
+    location ~ ^/@(vite-plugin-pwa|vite|id)/ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-front;
+    }
+
+    location /@ {
+        include /etc/nginx/funkwhale_proxy.conf;
+        proxy_pass   http://funkwhale-api;
+    }
+
     location / {
         expires 1d;
         include /etc/nginx/funkwhale_proxy.conf;
