fix(nginx): fix websocket issue in template
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2648>

--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -95,6 +95,7 @@ server {
 
     location / {
         expires 1d;
+        include /etc/nginx/funkwhale_proxy.conf;
         alias ${FUNKWHALE_FRONTEND_PATH}/;
         try_files $uri $uri/ /index.html;
     }
