--- a/deploy/docker.proxy.template
+++ b/deploy/docker.proxy.template
@@ -81,6 +81,7 @@ server {
 
     location / {
         expires 1d;
+        include /etc/nginx/funkwhale_proxy.conf;
         proxy_pass http://fw;
     }
 
