fix(nginx): Use correct passing in production configs
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2654>

--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -105,7 +105,8 @@ server {
 
     location ~ ^/@(vite-plugin-pwa|vite|id)/ {
         include /etc/nginx/funkwhale_proxy.conf;
-        proxy_pass   http://funkwhale-front;
+        alias ${FUNKWHALE_FRONTEND_PATH}/;
+        try_files $uri $uri/ /index.html;
     }
 
     location /@ {
