--- a/front/docker/funkwhale.conf.template
+++ b/front/docker/funkwhale.conf.template
@@ -72,7 +72,8 @@ server {
 
     location ~ ^/@(vite-plugin-pwa|vite|id)/ {
         include /etc/nginx/funkwhale_proxy.conf;
-        proxy_pass   http://funkwhale-front;
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /index.html;
     }
 
     location /@ {
