chore(api): Update Pillow to version 10.1.0
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2660>

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -76,7 +76,7 @@ cryptography = "==38.0.4"
 feedparser = "==6.0.10"
 musicbrainzngs = "==0.7.1"
 mutagen = "==1.46.0"
-pillow = "==9.3.0"
+pillow = "10.1.0"
 pydub = "==0.25.1"
 pyld = "==2.0.3"
 python-magic = "==0.4.27"
