--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -66,7 +66,7 @@ gunicorn = "==20.1.0"
 uvicorn = { version = "==0.20.0", extras = ["standard"] }
 
 # Libs
-aiohttp = "==3.8.6"
+aiohttp = "3.9.1"
 arrow = "==1.2.3"
 backports-zoneinfo = { version = "==0.2.1", python = "<3.9" }
 bleach = "==5.0.1"
