fix(deploy): Serve staticfiles in bare metal deployments
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2665>

--- a/deploy/nginx.template
+++ b/deploy/nginx.template
@@ -192,4 +192,7 @@ server {
         return 302 ${FUNKWHALE_PROTOCOL}://${FUNKWHALE_HOSTNAME}/api/v1/instance/spa-manifest.json;
     }
 
+    location /staticfiles/ {
+        alias ${STATIC_ROOT}/;
+    }
 }
