--- a/front/package.json
+++ b/front/package.json
@@ -17,10 +17,11 @@
     "postinstall": "yarn run fix-fomantic-css"
   },
   "dependencies": {
-    "@funkwhale/ui": "0.2.2",
     "@sentry/tracing": "7.47.0",
     "@sentry/vue": "7.47.0",
+    "@types/jsmediatags": "3.9.6",
     "@vue/runtime-core": "3.3.11",
+    "@vueuse/components": "10.6.1",
     "@vueuse/core": "10.3.0",
     "@vueuse/integrations": "10.3.0",
     "@vueuse/math": "10.3.0",
@@ -34,9 +35,13 @@
     "focus-trap": "7.2.0",
     "fomantic-ui-css": "2.9.3",
     "idb-keyval": "6.2.1",
+    "jsmediatags": "3.9.7",
     "lodash-es": "4.17.21",
     "lru-cache": "7.14.1",
     "moment": "2.29.4",
+    "music-metadata-browser": "2.5.10",
+    "nanoid": "5.0.4",
+    "pinia": "2.1.7",
     "showdown": "2.1.0",
     "stacktrace-js": "2.0.2",
     "standardized-audio-context": "25.3.60",
@@ -57,6 +62,7 @@
     "vuex-router-sync": "5.0.0"
   },
   "devDependencies": {
+    "@iconify/vue": "4.1.1",
     "@intlify/eslint-plugin-vue-i18n": "2.0.0",
     "@intlify/unplugin-vue-i18n": "2.0.0",
     "@types/diff": "5.0.9",
@@ -96,7 +102,8 @@
     "typescript": "4.9.5",
     "unplugin-vue-macros": "2.4.6",
     "utility-types": "3.10.0",
-    "vite": "4.3.5",
+    "vite": "5.0.4",
+    "vite-plugin-node-polyfills": "0.17.0",
     "vite-plugin-pwa": "0.14.4",
     "vitest": "0.25.8",
     "vue-tsc": "1.6.5",
