--- a/.gitpod/docker-compose.yml
+++ b/.gitpod/docker-compose.yml
@@ -28,15 +28,16 @@ services:
     environment:
       - "NGINX_MAX_BODY_SIZE=100M"
       - "FUNKWHALE_API_IP=host.docker.internal"
+      - "FUNKWHALE_API_HOST=host.docker.internal"
       - "FUNKWHALE_API_PORT=5000"
       - "FUNKWHALE_FRONT_IP=host.docker.internal"
       - "FUNKWHALE_FRONT_PORT=8080"
       - "FUNKWHALE_HOSTNAME=${FUNKWHALE_HOSTNAME-host.docker.internal}"
       - "FUNKWHALE_PROTOCOL=https"
     volumes:
-      - ../data/media:/protected/media:ro
+      - ../data/media:/workspace/funkwhale/data/media:ro
       - ../data/music:/music:ro
-      - ../data/staticfiles:/staticfiles:ro
+      - ../data/staticfiles:/usr/share/nginx/html/staticfiles/:ro
       - ../deploy/funkwhale_proxy.conf:/etc/nginx/funkwhale_proxy.conf:ro
       - ../docker/nginx/conf.dev:/etc/nginx/templates/default.conf.template:ro
       - ../front:/frontend:ro
