fix(gitpod): Make sure jinja2 and towncrier are available
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2667>

--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -6,6 +6,6 @@ RUN sudo apt update -y \
 
 RUN pyenv install 3.11 && pyenv global 3.11
 
-RUN pip install poetry pre-commit \
+RUN pip install poetry pre-commit jinja2 towncrier \
     && poetry config virtualenvs.create true \
     && poetry config virtualenvs.in-project true
