fix(docs): Update env file for Unix socket
Added note to the CACHE_URL variable to clarify Unix socket usage

Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2668>

--- a/deploy/env.prod.sample
+++ b/deploy/env.prod.sample
@@ -99,7 +99,7 @@ REVERSE_PROXY_TYPE=nginx
 #
 # If you want to use Redis over unix sockets, you'll actually need two variables:
 # For the cache part:
-#  CACHE_URL=redis:///run/redis/redis.sock?db=0
+#  CACHE_URL=unix:///run/redis/redis.sock?db=0
 # For the Celery/asynchronous tasks part:
 #  CELERY_BROKER_URL=redis+socket:///run/redis/redis.sock?virtual_host=0
 
