--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -28,9 +28,9 @@ funkwhale-manage = 'funkwhale_api.main:main'
 python = "^3.8,<3.13"
 
 # Django
-dj-rest-auth = { extras = ["with_social"], version = "2.2.8" }
+dj-rest-auth = "5.0.2"
 django = "==3.2.23"
-django-allauth = "==0.42.0"
+django-allauth = "0.55.2"
 django-cache-memoize = "0.1.10"
 django-cacheops = "==6.1"
 django-cleanup = "==6.0.0"
