chore(api): Update dependencies to align with Alpine 3.19
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2689>

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -72,12 +72,12 @@ backports-zoneinfo = { version = "==0.2.1", python = "<3.9" }
 bleach = "==6.1.0"
 boto3 = "==1.26.161"
 click = "==8.1.7"
-cryptography = "==38.0.4"
+cryptography = "==41.0.7"
 feedparser = "==6.0.10"
 liblistenbrainz = "==0.5.5"
 musicbrainzngs = "==0.7.1"
 mutagen = "==1.46.0"
-pillow = "10.1.0"
+pillow = "==10.1.0"
 pydub = "==0.25.1"
 pyld = "==2.0.3"
 python-magic = "==0.4.27"
