--- a/front/package.json
+++ b/front/package.json
@@ -22,10 +22,10 @@
     "@types/jsmediatags": "3.9.6",
     "@vue/runtime-core": "3.3.11",
     "@vueuse/components": "10.6.1",
-    "@vueuse/core": "10.3.0",
-    "@vueuse/integrations": "10.3.0",
-    "@vueuse/math": "10.3.0",
-    "@vueuse/router": "10.3.0",
+    "@vueuse/core": "10.6.1",
+    "@vueuse/integrations": "10.6.1",
+    "@vueuse/math": "10.6.1",
+    "@vueuse/router": "10.6.1",
     "axios": "1.2.3",
     "axios-auth-refresh": "3.3.6",
     "butterchurn": "3.0.0-beta.4",
@@ -100,13 +100,14 @@
     "sinon": "15.0.2",
     "standardized-audio-context-mock": "9.6.32",
     "typescript": "4.9.5",
+    "unocss": "0.58.0",
     "unplugin-vue-macros": "2.4.6",
     "utility-types": "3.10.0",
-    "vite": "5.0.4",
+    "vite": "5.0.6",
     "vite-plugin-node-polyfills": "0.17.0",
     "vite-plugin-pwa": "0.14.4",
     "vitest": "0.25.8",
-    "vue-tsc": "1.6.5",
+    "vue-tsc": "1.8.25",
     "workbox-core": "6.5.4",
     "workbox-precaching": "6.5.4",
     "workbox-routing": "6.5.4",
