chore(renovate): Prioritize major over minor over patch updates in develop
Part-of: <https://dev.funkwhale.audio/funkwhale/funkwhale/-/merge_requests/2690>

--- a/.gitlab/renovate.json
+++ b/.gitlab/renovate.json
@@ -26,6 +26,16 @@
       "prConcurrentLimit": 0
     },
     {
+      "matchBaseBranches": ["develop"],
+      "matchUpdateTypes": ["major"],
+      "prPriority": 2
+    },
+    {
+      "matchBaseBranches": ["develop"],
+      "matchUpdateTypes": ["minor"],
+      "prPriority": 1
+    },
+    {
       "matchUpdateTypes": ["major", "minor"],
       "matchBaseBranches": ["stable"],
       "enabled": false
